styles.css
/* ... */
.services h1 {
    background: #5A3F37;
     background: -webkit-linear-gradient(to right, #7bf59f, #008321);
     background: linear-gradient(to right, #7bf59f, #008321);
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
     margin-bottom: 5rem;
     font-size: 2.5rem;
}

.services__wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr;
}

.services__card {
    margin: 10px;
    height: 425px;
    width: 300px;
    border-radius: 4px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    color: #fff;
    background-image: linear-gradient(to right, #7bf59f 0%, #B5AC49 100%);
    transition: 0.3s ease in;
}

.services__card:nth-child(2) {
background: #3CA55C; 
background: -webkit-linear-gradient(to right, #B5AC49,#7bf59f);  
background: linear-gradient(to right, #B5AC49, #7bf59f); 

}

.services__card:nth-child(4) {
    background: #3CA55C; 
    background: -webkit-linear-gradient(to right,#3CA55C, #B5AC49);  
    background: linear-gradient(to right, #B5AC49, #3CA55C); 
}

.services__card h2 {
    text-align: center;
}

.services__card p {
    text-align: center;
    margin-top: 24px;
    font-size: 20px;
}

.services__btn {
    display: flex;
    justify-content: center;
    margin-top: 16px;
}

.services__card button {
    color: #fff;
    padding: 14px 24px;
    border: none;
    outline: none;
    border-radius: 4px;
    background: #131313;
    font-size: 1rem;
}

.services__card button:hover {
    cursor: pointer;
}

.services__card:hover {
    transform: scale(1.075);
    transition: 0.3s ease-in;
    cursor: pointer;
}


@media screen and (max-width: 1300px){
    .services__wrapper {
        grid-template-columns: 1fr 1fr;
    }
}

@media screen and (max-width: 768px) {
    .services__wrapper {
        grid-template-columns: 1fr;
    }
}
/* END OF SERVICES SECTION */


/* FOOTER SECTION */
.footer__container {
    background-color:#131313;
    padding: 5rem 0;
    display: flex;
    flex-direction: column;
    justify-content: center
    
}
/* END OF FOOTER SECTION */








 /* SCROLLBAR */
 *
 {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
 }

 ::-webkit-scrollbar
 {
     width: 0;
     
 }

 #scrollPath
 {
     position: fixed;
     top: 0;
     right: 0;
     width: 20px;
     height: 100%;
     background: rgba(0, 0, 0, 0.05);
 }

 #progressbar
 {
     position: fixed;
     top: 0;
     right: 0;
     width: 10px;
     
     background: linear-gradient(to top,#000000, #00c000, #00ff22)
         ;
     animation: animate 5s linear infinite;
 }

 @keyframes animate
 {
     0%, 100%
     {
         filter: hue-rotate(0deg);
     }
     50%
     {
         filter: hue-rotate(360deg);
     }
 }

 #progressbar:before
 {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background: linear-gradient(to top,#000000, #00c000, #00ff22)
         ;
     filter: blur(10px);
 }

 #progressbar:after
 {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background: linear-gradient(to top,#84ffc9, #e24bc9, #e64d4d);
     filter: blur(30px);
 }
 
 /* END OF SCROLLBAR */

